force-app/main/default/objects/Home_Services__c/Home_Services__c.object-meta.xml
<CustomObject>
    <label>Home Service</label>
    <nameField>
        <label>Home Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>