force-app/main/default/objects/Home_Services__c/fields/AC_Units__c.field-meta.xml
<CustomField>
    <fullName>AC_Units__c</fullName>
    <label># AC Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>