force-app/main/default/objects/Home_Services__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Home Services (Account)</relationshipLabel>
    <relationshipName>Home_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>