force-app/main/default/objects/Home_Services__c/fields/Account_Number_ACH__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_ACH__c</fullName>
    <label>Account Number</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>