force-app/main/default/objects/Home_Services__c/fields/Account_Number_Checking_Service__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Checking_Service__c</fullName>
    <label>Account Number Checking.</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>