force-app/main/default/objects/Home_Services__c/fields/Account_Number_Checking_Servicio_System__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Checking_Servicio_System__c</fullName>
    <label>Account Number Checking:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>