force-app/main/default/objects/Home_Services__c/fields/Account_Number_Credit_Card_Service_Syste__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Credit_Card_Service_Syste__c</fullName>
    <label>Account Number Credit Card:</label>
    <length>16</length>
    <type>Text</type>
</CustomField>