force-app/main/default/objects/Home_Services__c/fields/Account_Pool__c.field-meta.xml
<CustomField>
    <fullName>Account_Pool__c</fullName>
    <formula>Text(Account__r.Pool__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pool</label>
    <type>Text</type>
</CustomField>