force-app/main/default/objects/Home_Services__c/fields/Additional_Materials__c.field-meta.xml
<CustomField>
    <fullName>Additional_Materials__c</fullName>
    <label>Additional Materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>