force-app/main/default/objects/Home_Services__c/fields/Advanced_Device__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Device</label>
    <type>Checkbox</type>
</CustomField>