force-app/main/default/objects/Home_Services__c/fields/Affiliated_Rep__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliated Rep</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Home Services (Affiliated Rep)</relationshipLabel>
    <relationshipName>Home_Services_Affiliated_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>