force-app/main/default/objects/Home_Services__c/fields/Alarm_com_Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Alarm_com_Additional_Services__c</fullName>
    <label>Alarm.com Additional Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weather to Panel</fullName>
            </value>
            <value>
                <fullName>Severe Weather Alerts</fullName>
            </value>
            <value>
                <fullName>Lock Service</fullName>
            </value>
            <value>
                <fullName>Thermostat Service</fullName>
            </value>
            <value>
                <fullName>Lights Service</fullName>
            </value>
            <value>
                <fullName>Doorbell Camera</fullName>
            </value>
            <value>
                <fullName>Garage Door Control</fullName>
            </value>
            <value>
                <fullName>Lift Master Integration</fullName>
            </value>
            <value>
                <fullName>Two-Way Voice</fullName>
            </value>
            <value>
                <fullName>Pro Video 3-4 Cameras</fullName>
            </value>
            <value>
                <fullName>Pro Video Plus 5-8 Cameras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>