force-app/main/default/objects/Home_Services__c/fields/All_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>All_Decision_Makers__c</fullName>
    <label>All Decision Makers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>