force-app/main/default/objects/Home_Services__c/fields/Amount_Spent_on_Bottled_Water__c.field-meta.xml
<CustomField>
    <fullName>Amount_Spent_on_Bottled_Water__c</fullName>
    <label>Amount Spent on Bottled Water</label>
    <length>255</length>
    <type>Text</type>
</CustomField>