force-app/main/default/objects/Home_Services__c/fields/Amount_spent_on_Soaps__c.field-meta.xml
<CustomField>
    <fullName>Amount_spent_on_Soaps__c</fullName>
    <label>Amount spent on Soaps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>