force-app/main/default/objects/Home_Services__c/fields/Annual_Estimated_Generation__c.field-meta.xml
<CustomField>
    <fullName>Annual_Estimated_Generation__c</fullName>
    <inlineHelpText>In kWh.</inlineHelpText>
    <label>Annual Estimated Generation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>