force-app/main/default/objects/Home_Services__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment</label>
    <type>Checkbox</type>
</CustomField>