force-app/main/default/objects/Home_Services__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <formula>DATEVALUE( Appointment_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>