force-app/main/default/objects/Home_Services__c/fields/Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time__c</fullName>
    <label>Appointment Date/Time</label>
    <type>DateTime</type>
</CustomField>