force-app/main/default/objects/Home_Services__c/fields/Appointment_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Home Services</relationshipLabel>
    <relationshipName>Home_Services</relationshipName>
    <type>Lookup</type>
</CustomField>