force-app/main/default/objects/Home_Services__c/fields/Appointment_Out__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Out</label>
    <type>Checkbox</type>
</CustomField>