force-app/main/default/objects/Home_Services__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Services_User_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>