force-app/main/default/objects/Home_Services__c/fields/Approved_By_Plans__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Plans__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By.</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Services_Approved_By_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>