force-app/main/default/objects/Home_Services__c/fields/Approved_Date_Plans__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Plans__c</fullName>
    <label>Approved Date.</label>
    <type>DateTime</type>
</CustomField>