force-app/main/default/objects/Home_Services__c/fields/Appt_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_End_Date__c</fullName>
    <formula>DATEVALUE(Appt_End_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt End Date</label>
    <type>Date</type>
</CustomField>