force-app/main/default/objects/Home_Services__c/fields/Appt_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Appt_End_Time__c</fullName>
    <label>Appt End Time</label>
    <type>DateTime</type>
</CustomField>