force-app/main/default/objects/Home_Services__c/fields/Appt_Sale_Status__c.field-meta.xml
<CustomField>
    <fullName>Appt_Sale_Status__c</fullName>
    <label>Appt Sale Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale Approved</fullName>
            </value>
            <value>
                <fullName>Sale Cancelled</fullName>
            </value>
            <value>
                <fullName>Sale Turn Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>