force-app/main/default/objects/Home_Services__c/fields/Appt_Services_Status__c.field-meta.xml
<CustomField>
    <fullName>Appt_Services_Status__c</fullName>
    <label>Appt Services Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>