force-app/main/default/objects/Home_Services__c/fields/Appt_Time_Picker__c.field-meta.xml
<CustomField>
    <fullName>Appt_Time_Picker__c</fullName>
    <label>Appt Time Picker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8:00</fullName>
            </value>
            <value>
                <fullName>9:00</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>19:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>