force-app/main/default/objects/Home_Services__c/fields/ApptSetter__c.field-meta.xml
<CustomField>
    <fullName>ApptSetter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Appointment Setter</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Personnel__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Personnel__c.Appt_Setter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Home Services (Appointment Setter)</relationshipLabel>
    <relationshipName>Home_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>