force-app/main/default/objects/Home_Services__c/fields/APS_Account__c.field-meta.xml
<CustomField>
    <fullName>APS_Account__c</fullName>
    <label>APS Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>