force-app/main/default/objects/Home_Services__c/fields/Automatic_Text_Confirmation_C__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Text_Confirmation_C__c</fullName>
    <formula>IF(  $Setup.Text_Settings_Appt__c.Sale_Confirmation_C_Home_Automation__c  = TRUE, 
&quot;Home Automation&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sale_Confirmation_C_Pest_Control__c  = TRUE, &quot;Pest Control&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sale_Confirmation_C_Solar__c  = TRUE,&quot;Solar&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sale_Confirmation_C_Water__c  = TRUE,&quot;Water&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sale_Confirmation_C_Window__c  =TRUE,&quot;Remodel&quot;+BR(),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Text - Confirmation &quot;C&quot;</label>
    <type>Text</type>
</CustomField>