force-app/main/default/objects/Home_Services__c/fields/Automatic_Text_Confirmation_C_DateT__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Text_Confirmation_C_DateT__c</fullName>
    <label>Automatic Text - Confirmation &quot;C&quot; DateT</label>
    <type>DateTime</type>
</CustomField>