force-app/main/default/objects/Home_Services__c/fields/Automatic_Text_Confirmation_Text__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Text_Confirmation_Text__c</fullName>
    <formula>IF( $Setup.Text_Settings_Appt__c.Sale_Confirmation_Text_Home_Automation__c = TRUE,
&quot;Home Automation&quot;+BR(),&quot;&quot;)+
IF( $Setup.Text_Settings_Appt__c.Sale_Confirmation_Text_Pest_Control__c = TRUE, &quot;Pest Control&quot;+BR(),&quot;&quot;)+
IF( $Setup.Text_Settings_Appt__c.Sale_Confirmation_Text_Solar__c = TRUE,&quot;Solar&quot;+BR(),&quot;&quot;)+
IF( $Setup.Text_Settings_Appt__c.Sale_Confirmation_Text_Water__c = TRUE,&quot;Water&quot;+BR(),&quot;&quot;)+
IF( $Setup.Text_Settings_Appt__c.Sale_Confirmation_Text_Window__c =TRUE,&quot;Window&quot;+BR(),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Text - Confirmation Text</label>
    <type>Text</type>
</CustomField>