force-app/main/default/objects/Home_Services__c/fields/Automatic_Text_New_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Text_New_Appointment__c</fullName>
    <formula>IF(  $Setup.Text_Settings_Appt__c.Sale_New_Appointment_Home_Automation__c  = TRUE, 
&quot;Home Automation&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Sale_New_Appointment_Pest_Control__c  = TRUE, &quot;Pest Control&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Sale_New_Appointment_Solar__c  = TRUE,&quot;Solar&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Sale_New_Appointment_Water__c  = TRUE,&quot;Water&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Sale_New_Appointment_Window__c  =TRUE,&quot;Window&quot;+BR(),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Text - New Appointment</label>
    <type>Text</type>
</CustomField>