force-app/main/default/objects/Home_Services__c/fields/Automatic_Text_Review__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Text_Review__c</fullName>
    <formula>IF(  $Setup.Text_Settings_Appt__c.Sales_Review_Rep_HA__c  = TRUE, 
&quot;Home Automation&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sales_Review_Rep_Pest_Control__c  = TRUE, &quot;Pest Control&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sales_Review_Rep_SO__c  = TRUE,&quot;Solar&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sales_Review_Rep_WA__c  = TRUE,&quot;Water&quot;+BR(),&quot;&quot;)+ 
IF(  $Setup.Text_Settings_Appt__c.Sales_Review_Rep_WI__c  =TRUE,&quot;Window&quot;+BR(),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Text - Review</label>
    <type>Text</type>
</CustomField>