force-app/main/default/objects/Home_Services__c/fields/Average_Electric_Bill__c.field-meta.xml
<CustomField>
    <fullName>Average_Electric_Bill__c</fullName>
    <label>Average Electric Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>