force-app/main/default/objects/Home_Services__c/fields/Average_Electric_Bill_Text__c.field-meta.xml
<CustomField>
    <fullName>Average_Electric_Bill_Text__c</fullName>
    <label>Average Electric Bill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>