force-app/main/default/objects/Home_Services__c/fields/Avg_Temperature_AC_kept_at__c.field-meta.xml
<CustomField>
    <fullName>Avg_Temperature_AC_kept_at__c</fullName>
    <label>Avg. Temperature AC kept at</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>