force-app/main/default/objects/Home_Services__c/fields/Bank_Account_Name_System__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name_System__c</fullName>
    <label>Bank Account Name:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>