force-app/main/default/objects/Home_Services__c/fields/Bank_Account_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_Encrypted__c</fullName>
    <label>Bank Account: Number</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>