force-app/main/default/objects/Home_Services__c/fields/Bank_Account_Number_Servicio_System__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_Servicio_System__c</fullName>
    <label>Bank Account: Number:</label>
    <length>175</length>
    <type>Text</type>
</CustomField>