force-app/main/default/objects/Home_Services__c/fields/Bank_Account_Type_System__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type_System__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>