force-app/main/default/objects/Home_Services__c/fields/Bank_Name_Service__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Service__c</fullName>
    <label>Bank Name.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>