force-app/main/default/objects/Home_Services__c/fields/Battery_Location_Garage__c.field-meta.xml
<CustomField>
    <fullName>Battery_Location_Garage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage</label>
    <type>Checkbox</type>
</CustomField>