force-app/main/default/objects/Home_Services__c/fields/Battery_Use_Backup_Power__c.field-meta.xml
<CustomField>
    <fullName>Battery_Use_Backup_Power__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backup Power</label>
    <type>Checkbox</type>
</CustomField>