force-app/main/default/objects/Home_Services__c/fields/Battery_Use_Energy_Demand_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Battery_Use_Energy_Demand_Reduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Energy / Demand Reduction</label>
    <type>Checkbox</type>
</CustomField>