force-app/main/default/objects/Home_Services__c/fields/Battery_Use_Solar_Self_consumption__c.field-meta.xml
<CustomField>
    <fullName>Battery_Use_Solar_Self_consumption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Self-consumption</label>
    <type>Checkbox</type>
</CustomField>