force-app/main/default/objects/Home_Services__c/fields/Blinds__c.field-meta.xml
<CustomField>
    <fullName>Blinds__c</fullName>
    <label>Blinds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Faux</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>