force-app/main/default/objects/Home_Services__c/fields/Bottled_Water__c.field-meta.xml
<CustomField>
    <fullName>Bottled_Water__c</fullName>
    <label>Monthly bottled water spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>