force-app/main/default/objects/Home_Services__c/fields/Card_Expiration_Month_Service__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Month_Service__c</fullName>
    <label>Card Expiration Month.</label>
    <length>2</length>
    <type>Text</type>
</CustomField>