force-app/main/default/objects/Home_Services__c/fields/Card_Expiration_Year_Service__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Year_Service__c</fullName>
    <label>Card Expiration Year.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>