force-app/main/default/objects/Home_Services__c/fields/Card_Last_4_Service_System__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_4_Service_System__c</fullName>
    <label>Card Last 4:</label>
    <length>4</length>
    <type>Text</type>
</CustomField>